# bhub-challenge

./: .bandit  .gitignore  Dockerfile  README.md  docker-compose.yaml  setup.cfg
src/: Makefile  app.py  bhub_docs.json  config.py  conftest.py  pyproject.toml
src/bhub/: containers.py  docs.py  logger.py
src/bhub/endpoints/: base_use_case.py  exceptions.py
src/bhub/endpoints/bank_data/: controllers.py  schemas.py
src/bhub/endpoints/bank_data/tests/: conftest.py  test_controller.py
src/bhub/endpoints/bank_data/use_cases/: bank_data_create.py  bank_data_delete_by_uuid.py  bank_data_get_by_uuid.py  bank_data_update_by_uuid.py
src/bhub/endpoints/bank_data/use_cases/tests/: conftest.py  test_bank_data_create.py  test_bank_data_delete_by_uuid.py  test_bank_data_get_by_uuid.py  (+1 more)
src/bhub/endpoints/customers/: controllers.py  schemas.py
src/bhub/endpoints/customers/tests/: conftest.py  test_controller.py  test_schemas.py
src/bhub/endpoints/customers/use_cases/: customers_create.py  customers_delete_by_uuid.py  customers_get_by_uuid.py  customers_update_by_uuid.py
src/bhub/infrastructure/database/: sql.py
src/bhub/infrastructure/models/: bank_data.py  customers.py
src/bhub/infrastructure/repositories/: irepository.py  sql_repository.py
src/bhub/middlewares/: exception_handler.py
src/bhub/repositories/: bank_data_repository.py  customers_repository.py
src/bhub/services/: bank_data_service.py  customers_service.py
src/bhub/services/tests/: conftest.py  test_bank_data_service.py  test_customers_service.py
src/tests/: factories.py
(+5 files in other folders)
