[tool.poetry]
name = "bhub-challenge"

version = "0.1.0"

description = ""
authors = ["Hillary-Reis <hillary.reis2002@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = "^0.22.0"
dependency-injector = "^4.41.0"
sqlalchemy = "^2.0.4"
asyncpg = "^0.27.0"
sqlalchemy-utils = "^0.40.0"
aiologger = "^0.7.0"
pydantic = "^1.10.5"
httpx = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "7.2.1"
pytest-asyncio = "^0.20.3"
flake8 = "6.0.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
faker = "17.5.0"
factory-boy = "3.2.1"
pytest-factoryboy = "^2.5.1"
bandit = "^1.7.4"
coverage = "^7.2.6"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
